# graphify

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  setup.py
examples/: parse.py
graphify/: __init__.py
graphify/backbone/: __init__.py  initialization.py  networkx.py
graphify/descriptor/: search.py  utils.py
graphify/descriptor/constants/: patterns.py
graphify/models/: document.py
graphify/ops/: document.py  match.py  search.py
graphify/parser/: __init__.py
graphify/parsing/: __init__.py
graphify/utils/: recipes.py
tests/behavioural/: test_ppl_magim_simplified.py
tests/functional/: test_parsing_document.py
tests/ops/: test_ops_search.py
tests/unit/descriptor/: test_descriptor_search_patterns.py  test_descriptor_utils.py
tests/unit/ops/: test_ops_document.py  test_ops_search.py
tests/unit/parsing/: test_parsing.py
tests/unit/utils/: test_recipes.py
