[tool.poetry]
name = "graphify"
version = "1.0.0"
description = ""
authors = ["raul ferreira <raufer92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
nxpd = "^0.2.0"
hypothesis = "^4.15"
networkx = "=1.11"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.masonry.api"
